--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "debug": "^4.4.0",
     "jwt-decode": "^4.0.0",
     "next": "13.4.19",
     "react": "18.2.0",
